# PropRatt

./: .gitignore  CHANGELOG.md  LICENSE  PropRatt.cabal  README.md  package.yaml  stack.yaml
PropRat/: PropRat.cabal  README.md  package.yaml
PropRat/dist-newstyle/cache/: compiler  config  improved-plan
PropRat/src/: Main  Main.hs
PropRat/src/PropRat/: AsyncRat.hs  Generators.hs  Properties.hs  Utilities.hs
PropRat/test/: Spec.hs
PropRatt/: .gitignore  CHANGELOG.md  PropRatt.cabal  README.md  package.yaml  stack.yaml
PropRatt/dist-newstyle/cache/: elaborated-plan
PropRatt/examples/: Main.hs
PropRatt/examples/main/: Main.hs
PropRatt/examples/timer/: Timer.hs
PropRatt/src/: Main  Main.hs  PropRatt.hs
PropRatt/src/PropRatt/: Arbitrary.hs  AsyncRat.hs  Core.hs  Current.hs  Flatten.hs  Generators.hs  HList.hs  LTL.hs  Playground.hs  Properties.hs  RatUtils.hs  Signal.hs  Utilities.hs  Utils.hs  Value.hs
PropRatt/test/: Spec.hs
asyncRattusExample/: CHANGELOG.md  README.md  asyncRattusExample.cabal  package.yaml  stack.yaml
asyncRattusExample/app/: Main.hs
asyncRattusExample/src/: Lib.hs
asyncRattusExample/test/: Spec.hs
examples/main/: Main.hs
examples/timer/: Timer.hs
experiments/: package.yaml  test3.cabal
experiments/dist-newstyle/cache/: plan.json  source-hashes
experiments/src/: Main  Main.hs
experiments/src/Name/: Generators.hs  Properties.hs  Utilities.hs
experiments/test/: Spec.hs
rattusExample/: CHANGELOG.md  README.md  package.yaml  rattusExample.cabal  stack.yaml
rattusExample/app/: Main.hs
rattusExample/src/: Lib.hs
src/PropRatt/: Arbitrary.hs  Core.hs  HList.hs  LTL.hs  Value.hs
test/: Spec.hs  package.yaml  test3.cabal
test/dist-newstyle/cache/: compiler  config  solver-plan
test/src/: Main  Main.hs
test/src/Name/: ARat.hs  AsyncRat.hs  Generators.hs  Properties.hs  Utilities.hs
test/test/: Spec.hs
