cabal-version: 2.2
name:           PropRatt
version:        0.1.0.0
description:    PropRatt is a property-based testing framework for testing Async Rattus programs.
author:         Christian Emil Nielsen, Mathias Faber Kristiansen, Patrick Bahr
maintainer:     paba@itu.dk
copyright:      2025 Christian Emil Nielsen, Mathias Faber Kristiansen, Patrick Bahr
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/pa-ba/PropRatt

library
  exposed-modules:
      PropRatt
      PropRatt.Arbitrary
      PropRatt.Core
      PropRatt.HList
      PropRatt.LTL
      PropRatt.Signal
  other-modules:
      PropRatt.Utils
      PropRatt.Value
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      AsyncRattus
    , QuickCheck
    , base >=4.7 && <5
    , containers
    , text
  default-language: Haskell2010

executable main-example
  main-is: Main.hs
  hs-source-dirs:
      examples/main
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      AsyncRattus
    , PropRatt
    , QuickCheck
    , base
    , containers
    , text
  default-language: Haskell2010

executable timer-example
  main-is: Timer.hs

  hs-source-dirs:
      examples/timer
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      AsyncRattus
    , PropRatt
    , QuickCheck
    , base
    , containers
    , text
  default-language: Haskell2010

test-suite PropRatt-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      AsyncRattus
    , PropRatt
    , QuickCheck
    , base >=4.7 && <5
    , containers
    , text
  default-language: Haskell2010
